@@ -8,6 +8,59 @@
 #include <sys/sem.h>
 #include <time.h>
 #include <unistd.h>
+
+void semctl_test (int trace, const char *fname)
+{
+  key_t key;
+  int semid;
+  int nr_of_readers;
+  int ret;
+
+  union semun {
+     int              val;    /* Value for SETVAL */
+     struct semid_ds *buf;    /* Buffer for IPC_STAT, IPC_SET */
+     unsigned short  *array;  /* Array for GETALL, SETALL */
+     struct seminfo  *__buf;  /* Buffer for IPC_INFO
+                                 (Linux-specific) */
+  } u;
+
+  struct semid_ds ds;
+
+  key = ftok (fname, 1);
+  if (key == -1)
+    perror ("ftok");
+  nr_of_readers = 4;
+
+  semid = semget (key, 2 * nr_of_readers, IPC_CREAT + 0660);
+  if (semid == -1) {
+    perror ("semget");
+  }
+  if (trace)
+     printf("semid %d\n", semid);
+
+  u.buf = &ds;
+  ret = semctl (semid, 0, IPC_STAT, u);
+  if (ret == -1)
+     perror("semctl IPC_STAT");
+  if (trace)
+     printf("semid %d sem_nsems %d\n", semid, (int) ds.sem_nsems);
+
+  {
+    unsigned short semarray[2 * nr_of_readers];
+    for (int count = 0; count < nr_of_readers; count++) {
+        semarray[2 * count] = 0;
+        semarray[2 * count + 1] = 1000;
+      }
+    ret = semctl (semid, 0, SETALL, semarray);
+    if (ret == -1)
+      perror ("semctl SETALL");
+  }
+
+  ret = semctl (semid, 0, IPC_RMID);
+  if (ret == -1)
+    perror ("semctl IPC_RMID");
+}
+
 int main(int argc, char **argv)
 {
    int semid;
@@ -98,6 +151,7 @@ int main(int argc, char **argv)
       perror("semctl(IPC_RMID)");
       exit(1);
    }
-         
+
+   semctl_test(argc > 1, argv[0]);
    exit(0);
 }
